
res_pjsip
------------------
 * A new option 'suppress_q850_reason_headers' has been added to the endpoint
   object. Some devices can't accept multiple Reason headers and get confused
   when both 'SIP' and 'Q.850' Reason headers are received.  This option allows
   the 'Q.850' Reason header to be suppressed.  The default value is 'no'.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.21.0 to Asterisk 13.22.0 ----------
------------------------------------------------------------------------------

Core
------------------
 * Core bridging and, more specifically, bridge_softmix have been enhanced to
   relay received frames of type TEXT or TEXT_DATA to all participants in a
   softmix bridge.  res_pjsip_messaging and chan_pjsip have been enhanced to
   take advantage of this so when res_pjsip_messaging receives an in-dialog
   MESSAGE message from a user in a conference call, it's relayed to all
   other participants in the call.

app_sendtext
------------------
    Support Enhanced Messaging.  SendText now accepts new channel variables
    that can be used to override the To and From display names and set the
    Content-Type of a message.  Since you can now set Content-Type, other
    text/* content types are now valid.

app_confbridge
------------------
  * ConfbridgeList now shows talking status. This utilizes the same voice
    detection as the ConfbridgeTalking event, so bridges must be configured
    with "talk_detection_events=yes" for this flag to have meaning.

res_pjsip
------------------
  * Two new options have been added to the system and endpoint objects to
    control whether, on outbound calls, Asterisk will accept updated SDP answers
    during the initial INVITE transaction when 100rel is not in effect.
    This usually happens when the INVITE is forked to multiple UASs and more
    than one sends an SDP answer or when a single UAS needs to change a media